export const snapshot = {};

snapshot[`Issue Update Command - Help Text 1`] = `
stdout:
\`
Usage: update [issueId]

Description:

  Update a linear issue

Options:

  -h, --help                         - Show this help.                                                                   
  -a, --assignee      <assignee>     - Assign the issue to 'self' or someone (by username or name)                       
  --due-date          <dueDate>      - Due date of the issue                                                             
  --clear-due-date                   - Clear the due date on the issue                                                   
  --parent            <parent>       - Parent issue (if any) as a team_number code                                       
  -p, --priority      <priority>     - Priority of the issue (1-4, descending priority)                                  
  --estimate          <estimate>     - Points estimate of the issue                                                      
  -d, --description   <description>  - Description of the issue (prefer --description-file for markdown)                 
  --comment           <comment>      - Add a comment after successfully updating the issue                               
  --description-file  <path>         - Read description from a file (preferred for markdown content)                     
  --context-file      <path>         - Read a normalized external context JSON envelope from a file.                     
  --context-target    <target>       - Map --context-file into description or comment (default: comment).                
  --apply-triage                     - Apply deterministic triage hints from --context-file when routing fields are      
                                       omitted.                                                                          
  --autonomy-policy   <policy>       - Gate source-adjacent intake to suggest-only, preview-required, or apply-allowed.  
  -l, --label         <label>        - Issue label associated with the issue. May be repeated.                           
  --team              <team>         - Team associated with the issue (if not your default team)                         
  --project           <project>      - Name or slug ID of the project with the issue                                     
  -s, --state         <state>        - Workflow state for the issue (by name or type)                                    
  --milestone         <milestone>    - Name of the project milestone                                                     
  --cycle             <cycle>        - Cycle name, number, or 'active'                                                   
  --no-interactive                   - Accepted for compatibility; issue update is always non-interactive                
  -j, --json                         - Force machine-readable JSON output                                                
  --text                             - Output human-readable text                                                        
  --dry-run                          - Preview the update without mutating the issue                                     
  --timeout-ms        <timeoutMs>    - Timeout for write confirmation in milliseconds                                    
  -t, --title         <title>        - Title of the issue                                                                

Examples:

  Update state and assignee                                 linear issue update ENG-123 --state started --assignee self                                                 
  Preview an update with a comment                          linear issue update ENG-123 --state completed --comment "Ready for review" --dry-run                        
  Pipe a description into an update                         cat description.md | linear issue update ENG-123 --state started --dry-run --json                           
  Preview an update with normalized source context          linear issue update ENG-123 --state triage --context-file slack-thread.json --dry-run --json                
  Apply deterministic triage from normalized source context linear issue update ENG-123 --context-file slack-thread.json --apply-triage --dry-run --json                
  Preview source-intake suggestions without applying them   linear issue update ENG-123 --context-file slack-thread.json --autonomy-policy suggest-only --dry-run --json
  Return the updated issue as JSON                          linear issue update ENG-123 --title "Fix auth timeout edge case"                                            
  Return human-readable terminal output                     linear issue update ENG-123 --title "Fix auth timeout edge case" --text                                     

\`
stderr:
""
`;

snapshot[`Issue Update Command - Happy Path 1`] = `
stdout:
"Updating issue ENG-123

✓ Updated issue ENG-123: Updated authentication bug fix
https://linear.app/test-team/issue/ENG-123/updated-authentication-bug-fix
"
stderr:
""
`;

snapshot[`Issue Update Command - Accepts No Interactive Flag 1`] = `
stdout:
"Updating issue ENG-123

✓ Updated issue ENG-123: Updated without prompts
https://linear.app/test-team/issue/ENG-123/updated-without-prompts
"
stderr:
""
`;

snapshot[`Issue Update Command - JSON Output 1`] = `
stdout:
'{
  "id": "issue-existing-123",
  "identifier": "ENG-123",
  "title": "Updated from bot",
  "url": "https://linear.app/test-team/issue/ENG-123/updated-from-bot",
  "dueDate": "2026-04-01",
  "assignee": {
    "id": "user-self-123",
    "name": "alice.bot",
    "displayName": "Alice Bot",
    "initials": "AB"
  },
  "parent": {
    "id": "parent-issue-id",
    "identifier": "ENG-100",
    "title": "Parent Epic",
    "url": "https://linear.app/test-team/issue/ENG-100/parent-epic",
    "dueDate": null,
    "state": {
      "name": "In Progress",
      "color": "#f87462"
    }
  },
  "state": {
    "name": "Todo",
    "color": "#bec2c8"
  },
  "comment": {
    "id": "comment-json-123",
    "body": "Investigating now",
    "createdAt": "2026-03-22T12:45:00Z",
    "url": "https://linear.app/test-team/issue/ENG-123/updated-from-bot#comment-json-123",
    "parentId": null,
    "issue": {
      "id": "issue-existing-123",
      "identifier": "ENG-123",
      "title": "Updated from bot",
      "url": "https://linear.app/test-team/issue/ENG-123/updated-from-bot"
    },
    "user": {
      "name": "alice.bot",
      "displayName": "Alice Bot"
    }
  },
  "receipt": {
    "operationId": "issue.update",
    "resource": "issue",
    "action": "update",
    "resolvedRefs": {
      "issueIdentifier": "ENG-123",
      "teamKey": "ENG",
      "assignee": "alice.bot",
      "parentIssueIdentifier": "ENG-100",
      "state": "Todo",
      "sourceSystem": null,
      "sourceRef": null
    },
    "appliedChanges": [
      "title",
      "assignee",
      "dueDate",
      "team",
      "comment"
    ],
    "noOp": false,
    "partialSuccess": false,
    "nextSafeAction": "read_before_retry"
  },
  "operation": {
    "family": "write_operation",
    "version": "v1",
    "phase": "apply",
    "command": "issue.update",
    "resource": "issue",
    "action": "update",
    "summary": "Updated issue ENG-123",
    "refs": {
      "issueIdentifier": "ENG-123",
      "teamKey": "ENG",
      "assignee": "alice.bot",
      "parentIssueIdentifier": "ENG-100",
      "state": "Todo",
      "sourceSystem": null,
      "sourceRef": null
    },
    "changes": [
      "title",
      "assignee",
      "dueDate",
      "team",
      "comment"
    ],
    "noOp": false,
    "partialSuccess": false,
    "nextSafeAction": "read_before_retry"
  }
}
'
stderr:
""
`;

snapshot[`Issue Update Command - JSON Dry Run 1`] = `
stdout:
'{
  "success": true,
  "dryRun": true,
  "summary": "Would update issue ENG-123",
  "data": {
    "command": "issue.update",
    "issue": {
      "identifier": "ENG-123"
    },
    "changes": {
      "title": "Updated from bot",
      "assigneeId": "user-self-123",
      "dueDate": "2026-04-01",
      "teamId": "team-eng-id",
      "parent": null
    },
    "comment": "Investigating now"
  },
  "operation": {
    "family": "write_operation",
    "version": "v1",
    "phase": "preview",
    "command": "issue.update",
    "resource": "issue",
    "action": "update",
    "summary": "Would update issue ENG-123",
    "refs": {
      "issueIdentifier": "ENG-123",
      "teamKey": "ENG",
      "parentIssueIdentifier": null,
      "state": null,
      "sourceSystem": null,
      "sourceRef": null
    },
    "changes": [
      "title",
      "assignee",
      "dueDate",
      "team",
      "comment"
    ],
    "noOp": false,
    "partialSuccess": false,
    "nextSafeAction": "apply"
  }
}
'
stderr:
""
`;

snapshot[`Issue Update Command - JSON Dry Run With Context File 1`] = `
stdout:
'{
  "success": true,
  "dryRun": true,
  "summary": "Would update issue ENG-123",
  "data": {
    "command": "issue.update",
    "issue": {
      "identifier": "ENG-123"
    },
    "changes": {
      "teamId": "team-eng-id",
      "stateId": "state-triage",
      "parent": null
    },
    "comment": "## Source Context\\\\n- System: slack\\\\n- Ref: C12345:1712382000.100200\\\\n- URL: https://example.slack.com/archives/C12345/p1712382000100200\\\\n- Captured At: 2026-04-12T10:00:00Z\\\\n\\\\n### Title\\\\nCustomer reports auth refresh failures\\\\n\\\\n### Summary\\\\nA customer thread reports repeated auth refresh failures after the latest deploy.\\\\n\\\\n### Text Blocks\\\\n#### Initial report (alice, 2026-04-12T09:58:00Z)\\\\nMultiple customers say refresh tokens fail after 30 minutes.\\\\n#### Support follow-up (bob, 2026-04-12T09:59:00Z)\\\\nLogs point to the new auth rollout in production.\\\\n\\\\n### Participants\\\\n- Alice Agent @alice (reporter)\\\\n- Bob Support @bob (support)\\\\n\\\\n### Attachments\\\\n- auth-refresh.log (text/plain)\\\\n  URL: https://example.com/auth-refresh.log\\\\n\\\\n### Metadata\\\\n- customerId: cust_123\\\\n- severity: high\\\\n",
    "sourceContext": {
      "version": "v1",
      "target": "comment",
      "source": {
        "system": "slack",
        "ref": "C12345:1712382000.100200",
        "url": "https://example.slack.com/archives/C12345/p1712382000100200",
        "title": "Customer reports auth refresh failures",
        "capturedAt": "2026-04-12T10:00:00Z"
      },
      "title": null,
      "summary": "A customer thread reports repeated auth refresh failures after the latest deploy.",
      "participantCount": 2,
      "textBlockCount": 2,
      "attachmentCount": 1,
      "metadataKeys": [
        "customerId",
        "severity"
      ]
    },
    "autonomyPolicy": {
      "family": "source_intake_autonomy_policy",
      "version": "v1",
      "selected": "apply-allowed",
      "semantics": {
        "requiresDryRun": false,
        "allowsMutation": true,
        "allowsTriageApply": true
      }
    }
  },
  "operation": {
    "family": "write_operation",
    "version": "v1",
    "phase": "preview",
    "command": "issue.update",
    "resource": "issue",
    "action": "update",
    "summary": "Would update issue ENG-123",
    "refs": {
      "issueIdentifier": "ENG-123",
      "teamKey": "ENG",
      "parentIssueIdentifier": null,
      "state": "triage",
      "sourceSystem": "slack",
      "sourceRef": "C12345:1712382000.100200"
    },
    "changes": [
      "team",
      "state",
      "comment"
    ],
    "noOp": false,
    "partialSuccess": false,
    "nextSafeAction": "apply",
    "autonomyPolicy": {
      "family": "source_intake_autonomy_policy",
      "version": "v1",
      "selected": "apply-allowed",
      "semantics": {
        "requiresDryRun": false,
        "allowsMutation": true,
        "allowsTriageApply": true
      }
    }
  }
}
'
stderr:
""
`;

snapshot[`Issue Update Command - JSON Output With Context File 1`] = `
stdout:
'{
  "id": "issue-existing-123",
  "identifier": "ENG-123",
  "title": "Updated from context",
  "url": "https://linear.app/test-team/issue/ENG-123/updated-from-context",
  "dueDate": null,
  "assignee": null,
  "parent": null,
  "state": {
    "name": "Triage",
    "color": "#f2c94c"
  },
  "sourceContext": {
    "version": "v1",
    "target": "comment",
    "source": {
      "system": "slack",
      "ref": "C12345:1712382000.100200",
      "url": "https://example.slack.com/archives/C12345/p1712382000100200",
      "title": "Customer reports auth refresh failures",
      "capturedAt": "2026-04-12T10:00:00Z"
    },
    "title": null,
    "summary": "A customer thread reports repeated auth refresh failures after the latest deploy.",
    "participantCount": 2,
    "textBlockCount": 2,
    "attachmentCount": 1,
    "metadataKeys": [
      "customerId",
      "severity"
    ]
  },
  "autonomyPolicy": {
    "family": "source_intake_autonomy_policy",
    "version": "v1",
    "selected": "apply-allowed",
    "semantics": {
      "requiresDryRun": false,
      "allowsMutation": true,
      "allowsTriageApply": true
    }
  },
  "comment": {
    "id": "comment-context-123",
    "body": "## Source Context\\\\n- System: slack",
    "createdAt": "2026-04-12T10:00:00Z",
    "url": "https://linear.app/test-team/issue/ENG-123/updated-from-context#comment-context-123",
    "parentId": null,
    "issue": {
      "id": "issue-existing-123",
      "identifier": "ENG-123",
      "title": "Updated from context",
      "url": "https://linear.app/test-team/issue/ENG-123/updated-from-context"
    },
    "user": {
      "name": "alice.bot",
      "displayName": "Alice Bot"
    }
  },
  "receipt": {
    "operationId": "issue.update",
    "resource": "issue",
    "action": "update",
    "resolvedRefs": {
      "issueIdentifier": "ENG-123",
      "teamKey": "ENG",
      "assignee": null,
      "parentIssueIdentifier": null,
      "state": "Triage",
      "sourceSystem": "slack",
      "sourceRef": "C12345:1712382000.100200"
    },
    "appliedChanges": [
      "team",
      "state",
      "comment"
    ],
    "noOp": false,
    "partialSuccess": false,
    "nextSafeAction": "read_before_retry",
    "sourceProvenance": {
      "version": "v1",
      "target": "comment",
      "source": {
        "system": "slack",
        "ref": "C12345:1712382000.100200",
        "url": "https://example.slack.com/archives/C12345/p1712382000100200",
        "title": "Customer reports auth refresh failures",
        "capturedAt": "2026-04-12T10:00:00Z"
      },
      "contextIds": {
        "customerId": "cust_123"
      },
      "evidenceRefs": [
        "https://example.com/auth-refresh.log"
      ],
      "relatedUrls": [
        "https://example.slack.com/archives/C12345/p1712382000100200",
        "https://example.com/auth-refresh.log"
      ],
      "participantHandles": [
        "alice",
        "bob"
      ],
      "metadataKeys": [
        "customerId",
        "severity"
      ],
      "triage": {
        "applied": false,
        "team": "ENG",
        "state": "triage",
        "labels": [
          "customer",
          "incident"
        ],
        "duplicateIssueRefs": [
          "ENG-88"
        ],
        "relatedIssueRefs": [
          "ENG-42"
        ]
      }
    },
    "autonomyPolicy": {
      "family": "source_intake_autonomy_policy",
      "version": "v1",
      "selected": "apply-allowed",
      "semantics": {
        "requiresDryRun": false,
        "allowsMutation": true,
        "allowsTriageApply": true
      }
    }
  },
  "operation": {
    "family": "write_operation",
    "version": "v1",
    "phase": "apply",
    "command": "issue.update",
    "resource": "issue",
    "action": "update",
    "summary": "Updated issue ENG-123",
    "refs": {
      "issueIdentifier": "ENG-123",
      "teamKey": "ENG",
      "assignee": null,
      "parentIssueIdentifier": null,
      "state": "Triage",
      "sourceSystem": "slack",
      "sourceRef": "C12345:1712382000.100200"
    },
    "changes": [
      "team",
      "state",
      "comment"
    ],
    "noOp": false,
    "partialSuccess": false,
    "nextSafeAction": "read_before_retry",
    "autonomyPolicy": {
      "family": "source_intake_autonomy_policy",
      "version": "v1",
      "selected": "apply-allowed",
      "semantics": {
        "requiresDryRun": false,
        "allowsMutation": true,
        "allowsTriageApply": true
      }
    }
  }
}
'
stderr:
""
`;

snapshot[`Issue Update Command - JSON Dry Run With Applied Triage 1`] = `
stdout:
'{
  "success": true,
  "dryRun": true,
  "summary": "Would update issue ENG-123",
  "data": {
    "command": "issue.update",
    "issue": {
      "identifier": "ENG-123"
    },
    "changes": {
      "labelIds": [
        "label-customer",
        "label-incident"
      ],
      "teamId": "team-eng-id",
      "stateId": "state-triage",
      "parent": null
    },
    "comment": "## Source Context\\\\n- System: slack\\\\n- Ref: C12345:1712382000.100200\\\\n- URL: https://example.slack.com/archives/C12345/p1712382000100200\\\\n- Captured At: 2026-04-12T10:00:00Z\\\\n\\\\n### Title\\\\nCustomer reports auth refresh failures\\\\n\\\\n### Summary\\\\nA customer thread reports repeated auth refresh failures after the latest deploy.\\\\n\\\\n### Text Blocks\\\\n#### Initial report (alice, 2026-04-12T09:58:00Z)\\\\nMultiple customers say refresh tokens fail after 30 minutes.\\\\n#### Support follow-up (bob, 2026-04-12T09:59:00Z)\\\\nLogs point to the new auth rollout in production.\\\\n\\\\n### Participants\\\\n- Alice Agent @alice (reporter)\\\\n- Bob Support @bob (support)\\\\n\\\\n### Attachments\\\\n- auth-refresh.log (text/plain)\\\\n  URL: https://example.com/auth-refresh.log\\\\n\\\\n### Metadata\\\\n- customerId: cust_123\\\\n- severity: high\\\\n",
    "sourceContext": {
      "version": "v1",
      "target": "comment",
      "source": {
        "system": "slack",
        "ref": "C12345:1712382000.100200",
        "url": "https://example.slack.com/archives/C12345/p1712382000100200",
        "title": "Customer reports auth refresh failures",
        "capturedAt": "2026-04-12T10:00:00Z"
      },
      "title": null,
      "summary": "A customer thread reports repeated auth refresh failures after the latest deploy.",
      "participantCount": 2,
      "textBlockCount": 2,
      "attachmentCount": 1,
      "metadataKeys": [
        "customerId",
        "severity"
      ]
    },
    "autonomyPolicy": {
      "family": "source_intake_autonomy_policy",
      "version": "v1",
      "selected": "apply-allowed",
      "semantics": {
        "requiresDryRun": false,
        "allowsMutation": true,
        "allowsTriageApply": true
      }
    },
    "triage": {
      "family": "source_intake_triage",
      "version": "v1",
      "target": "issue.update",
      "applyRequested": true,
      "autonomyPolicy": {
        "family": "source_intake_autonomy_policy",
        "version": "v1",
        "selected": "apply-allowed",
        "semantics": {
          "requiresDryRun": false,
          "allowsMutation": true,
          "allowsTriageApply": true
        }
      },
      "appliedChanges": [
        "state",
        "labels"
      ],
      "suggestions": {
        "team": {
          "requested": "ENG",
          "status": "resolved",
          "resolved": {
            "id": "team-eng-id",
            "key": "ENG",
            "name": "Engineering"
          },
          "applied": false,
          "reason": "This command previews team routing but does not apply it."
        },
        "state": {
          "requested": "triage",
          "status": "resolved",
          "resolved": {
            "id": "state-triage",
            "name": "Triage",
            "type": "triage",
            "color": "#f2c94c"
          },
          "applied": true,
          "reason": null
        },
        "labels": [
          {
            "requested": "customer",
            "status": "resolved",
            "resolved": {
              "id": "label-customer",
              "name": "customer",
              "color": "#f87462"
            },
            "applied": true,
            "reason": null
          },
          {
            "requested": "incident",
            "status": "resolved",
            "resolved": {
              "id": "label-incident",
              "name": "incident",
              "color": "#f2c94c"
            },
            "applied": true,
            "reason": null
          }
        ],
        "duplicateCandidates": [
          {
            "requested": "ENG-88",
            "status": "resolved",
            "resolved": {
              "id": "issue-88",
              "identifier": "ENG-88",
              "title": "Previous auth bug",
              "url": "https://linear.app/test-team/issue/ENG-88/previous-auth-bug",
              "state": {
                "name": "Done",
                "color": "#68cc58"
              }
            },
            "reason": null
          }
        ],
        "relatedIssues": [
          {
            "requested": "ENG-42",
            "status": "resolved",
            "resolved": {
              "id": "issue-42",
              "identifier": "ENG-42",
              "title": "Auth incident follow-up",
              "url": "https://linear.app/test-team/issue/ENG-42/auth-incident-follow-up",
              "state": {
                "name": "In Progress",
                "color": "#f87462"
              }
            },
            "reason": null
          }
        ]
      }
    }
  },
  "operation": {
    "family": "write_operation",
    "version": "v1",
    "phase": "preview",
    "command": "issue.update",
    "resource": "issue",
    "action": "update",
    "summary": "Would update issue ENG-123",
    "refs": {
      "issueIdentifier": "ENG-123",
      "teamKey": "ENG",
      "parentIssueIdentifier": null,
      "state": "Triage",
      "sourceSystem": "slack",
      "sourceRef": "C12345:1712382000.100200"
    },
    "changes": [
      "labels",
      "team",
      "state",
      "comment"
    ],
    "noOp": false,
    "partialSuccess": false,
    "nextSafeAction": "apply",
    "autonomyPolicy": {
      "family": "source_intake_autonomy_policy",
      "version": "v1",
      "selected": "apply-allowed",
      "semantics": {
        "requiresDryRun": false,
        "allowsMutation": true,
        "allowsTriageApply": true
      }
    }
  }
}
'
stderr:
""
`;

snapshot[`Issue Update Command - JSON Dry Run With Suggest-Only Autonomy Policy 1`] = `
stdout:
'{
  "success": true,
  "dryRun": true,
  "summary": "Would update issue ENG-123",
  "data": {
    "command": "issue.update",
    "issue": {
      "identifier": "ENG-123"
    },
    "changes": {
      "teamId": "team-eng-id",
      "parent": null
    },
    "comment": "## Source Context\\\\n- System: slack\\\\n- Ref: C12345:1712382000.100200\\\\n- URL: https://example.slack.com/archives/C12345/p1712382000100200\\\\n- Captured At: 2026-04-12T10:00:00Z\\\\n\\\\n### Title\\\\nCustomer reports auth refresh failures\\\\n\\\\n### Summary\\\\nA customer thread reports repeated auth refresh failures after the latest deploy.\\\\n\\\\n### Text Blocks\\\\n#### Initial report (alice, 2026-04-12T09:58:00Z)\\\\nMultiple customers say refresh tokens fail after 30 minutes.\\\\n#### Support follow-up (bob, 2026-04-12T09:59:00Z)\\\\nLogs point to the new auth rollout in production.\\\\n\\\\n### Participants\\\\n- Alice Agent @alice (reporter)\\\\n- Bob Support @bob (support)\\\\n\\\\n### Attachments\\\\n- auth-refresh.log (text/plain)\\\\n  URL: https://example.com/auth-refresh.log\\\\n\\\\n### Metadata\\\\n- customerId: cust_123\\\\n- severity: high\\\\n",
    "sourceContext": {
      "version": "v1",
      "target": "comment",
      "source": {
        "system": "slack",
        "ref": "C12345:1712382000.100200",
        "url": "https://example.slack.com/archives/C12345/p1712382000100200",
        "title": "Customer reports auth refresh failures",
        "capturedAt": "2026-04-12T10:00:00Z"
      },
      "title": null,
      "summary": "A customer thread reports repeated auth refresh failures after the latest deploy.",
      "participantCount": 2,
      "textBlockCount": 2,
      "attachmentCount": 1,
      "metadataKeys": [
        "customerId",
        "severity"
      ]
    },
    "autonomyPolicy": {
      "family": "source_intake_autonomy_policy",
      "version": "v1",
      "selected": "suggest-only",
      "semantics": {
        "requiresDryRun": true,
        "allowsMutation": false,
        "allowsTriageApply": false
      }
    },
    "triage": {
      "family": "source_intake_triage",
      "version": "v1",
      "target": "issue.update",
      "applyRequested": false,
      "autonomyPolicy": {
        "family": "source_intake_autonomy_policy",
        "version": "v1",
        "selected": "suggest-only",
        "semantics": {
          "requiresDryRun": true,
          "allowsMutation": false,
          "allowsTriageApply": false
        }
      },
      "appliedChanges": [],
      "suggestions": {
        "team": {
          "requested": "ENG",
          "status": "resolved",
          "resolved": {
            "id": "team-eng-id",
            "key": "ENG",
            "name": "Engineering"
          },
          "applied": false,
          "reason": "This command previews team routing but does not apply it."
        },
        "state": {
          "requested": "triage",
          "status": "resolved",
          "resolved": {
            "id": "state-triage",
            "name": "Triage",
            "type": "triage",
            "color": "#f2c94c"
          },
          "applied": false,
          "reason": "Pass --apply-triage to apply this suggestion."
        },
        "labels": [
          {
            "requested": "customer",
            "status": "resolved",
            "resolved": {
              "id": "label-customer",
              "name": "customer",
              "color": "#f87462"
            },
            "applied": false,
            "reason": "Pass --apply-triage to apply this suggestion."
          },
          {
            "requested": "incident",
            "status": "resolved",
            "resolved": {
              "id": "label-incident",
              "name": "incident",
              "color": "#f2c94c"
            },
            "applied": false,
            "reason": "Pass --apply-triage to apply this suggestion."
          }
        ],
        "duplicateCandidates": [
          {
            "requested": "ENG-88",
            "status": "resolved",
            "resolved": {
              "id": "issue-88",
              "identifier": "ENG-88",
              "title": "Previous auth bug",
              "url": "https://linear.app/test-team/issue/ENG-88/previous-auth-bug",
              "state": {
                "name": "Done",
                "color": "#68cc58"
              }
            },
            "reason": null
          }
        ],
        "relatedIssues": [
          {
            "requested": "ENG-42",
            "status": "resolved",
            "resolved": {
              "id": "issue-42",
              "identifier": "ENG-42",
              "title": "Auth incident follow-up",
              "url": "https://linear.app/test-team/issue/ENG-42/auth-incident-follow-up",
              "state": {
                "name": "In Progress",
                "color": "#f87462"
              }
            },
            "reason": null
          }
        ]
      }
    }
  },
  "operation": {
    "family": "write_operation",
    "version": "v1",
    "phase": "preview",
    "command": "issue.update",
    "resource": "issue",
    "action": "update",
    "summary": "Would update issue ENG-123",
    "refs": {
      "issueIdentifier": "ENG-123",
      "teamKey": "ENG",
      "parentIssueIdentifier": null,
      "state": null,
      "sourceSystem": "slack",
      "sourceRef": "C12345:1712382000.100200"
    },
    "changes": [
      "team",
      "comment"
    ],
    "noOp": false,
    "partialSuccess": false,
    "nextSafeAction": "apply",
    "autonomyPolicy": {
      "family": "source_intake_autonomy_policy",
      "version": "v1",
      "selected": "suggest-only",
      "semantics": {
        "requiresDryRun": true,
        "allowsMutation": false,
        "allowsTriageApply": false
      }
    }
  }
}
'
stderr:
""
`;

snapshot[`Issue Update Command - JSON Output With Applied Triage 1`] = `
stdout:
'{
  "id": "issue-existing-123",
  "identifier": "ENG-123",
  "title": "Updated from triage context",
  "url": "https://linear.app/test-team/issue/ENG-123/updated-from-triage-context",
  "dueDate": null,
  "assignee": null,
  "parent": null,
  "state": {
    "name": "Triage",
    "color": "#f2c94c"
  },
  "sourceContext": {
    "version": "v1",
    "target": "comment",
    "source": {
      "system": "slack",
      "ref": "C12345:1712382000.100200",
      "url": "https://example.slack.com/archives/C12345/p1712382000100200",
      "title": "Customer reports auth refresh failures",
      "capturedAt": "2026-04-12T10:00:00Z"
    },
    "title": null,
    "summary": "A customer thread reports repeated auth refresh failures after the latest deploy.",
    "participantCount": 2,
    "textBlockCount": 2,
    "attachmentCount": 1,
    "metadataKeys": [
      "customerId",
      "severity"
    ]
  },
  "autonomyPolicy": {
    "family": "source_intake_autonomy_policy",
    "version": "v1",
    "selected": "apply-allowed",
    "semantics": {
      "requiresDryRun": false,
      "allowsMutation": true,
      "allowsTriageApply": true
    }
  },
  "triage": {
    "family": "source_intake_triage",
    "version": "v1",
    "target": "issue.update",
    "applyRequested": true,
    "autonomyPolicy": {
      "family": "source_intake_autonomy_policy",
      "version": "v1",
      "selected": "apply-allowed",
      "semantics": {
        "requiresDryRun": false,
        "allowsMutation": true,
        "allowsTriageApply": true
      }
    },
    "appliedChanges": [
      "state",
      "labels"
    ],
    "suggestions": {
      "team": {
        "requested": "ENG",
        "status": "resolved",
        "resolved": {
          "id": "team-eng-id",
          "key": "ENG",
          "name": "Engineering"
        },
        "applied": false,
        "reason": "This command previews team routing but does not apply it."
      },
      "state": {
        "requested": "triage",
        "status": "resolved",
        "resolved": {
          "id": "state-triage",
          "name": "Triage",
          "type": "triage",
          "color": "#f2c94c"
        },
        "applied": true,
        "reason": null
      },
      "labels": [
        {
          "requested": "customer",
          "status": "resolved",
          "resolved": {
            "id": "label-customer",
            "name": "customer",
            "color": "#f87462"
          },
          "applied": true,
          "reason": null
        },
        {
          "requested": "incident",
          "status": "resolved",
          "resolved": {
            "id": "label-incident",
            "name": "incident",
            "color": "#f2c94c"
          },
          "applied": true,
          "reason": null
        }
      ],
      "duplicateCandidates": [
        {
          "requested": "ENG-88",
          "status": "resolved",
          "resolved": {
            "id": "issue-88",
            "identifier": "ENG-88",
            "title": "Previous auth bug",
            "url": "https://linear.app/test-team/issue/ENG-88/previous-auth-bug",
            "state": {
              "name": "Done",
              "color": "#68cc58"
            }
          },
          "reason": null
        }
      ],
      "relatedIssues": [
        {
          "requested": "ENG-42",
          "status": "resolved",
          "resolved": {
            "id": "issue-42",
            "identifier": "ENG-42",
            "title": "Auth incident follow-up",
            "url": "https://linear.app/test-team/issue/ENG-42/auth-incident-follow-up",
            "state": {
              "name": "In Progress",
              "color": "#f87462"
            }
          },
          "reason": null
        }
      ]
    }
  },
  "comment": {
    "id": "comment-triage-123",
    "body": "## Source Context\\\\n- System: slack",
    "createdAt": "2026-04-12T10:00:00Z",
    "url": "https://linear.app/test-team/issue/ENG-123/updated-from-triage-context#comment-triage-123",
    "parentId": null,
    "issue": {
      "id": "issue-existing-123",
      "identifier": "ENG-123",
      "title": "Updated from triage context",
      "url": "https://linear.app/test-team/issue/ENG-123/updated-from-triage-context"
    },
    "user": {
      "name": "alice.bot",
      "displayName": "Alice Bot"
    }
  },
  "receipt": {
    "operationId": "issue.update",
    "resource": "issue",
    "action": "update",
    "resolvedRefs": {
      "issueIdentifier": "ENG-123",
      "teamKey": "ENG",
      "assignee": null,
      "parentIssueIdentifier": null,
      "state": "Triage",
      "sourceSystem": "slack",
      "sourceRef": "C12345:1712382000.100200"
    },
    "appliedChanges": [
      "labels",
      "team",
      "state",
      "comment"
    ],
    "noOp": false,
    "partialSuccess": false,
    "nextSafeAction": "read_before_retry",
    "sourceProvenance": {
      "version": "v1",
      "target": "comment",
      "source": {
        "system": "slack",
        "ref": "C12345:1712382000.100200",
        "url": "https://example.slack.com/archives/C12345/p1712382000100200",
        "title": "Customer reports auth refresh failures",
        "capturedAt": "2026-04-12T10:00:00Z"
      },
      "contextIds": {
        "customerId": "cust_123"
      },
      "evidenceRefs": [
        "https://example.com/auth-refresh.log"
      ],
      "relatedUrls": [
        "https://example.slack.com/archives/C12345/p1712382000100200",
        "https://example.com/auth-refresh.log"
      ],
      "participantHandles": [
        "alice",
        "bob"
      ],
      "metadataKeys": [
        "customerId",
        "severity"
      ],
      "triage": {
        "applied": true,
        "team": "ENG",
        "state": "triage",
        "labels": [
          "customer",
          "incident"
        ],
        "duplicateIssueRefs": [
          "ENG-88"
        ],
        "relatedIssueRefs": [
          "ENG-42"
        ]
      }
    },
    "autonomyPolicy": {
      "family": "source_intake_autonomy_policy",
      "version": "v1",
      "selected": "apply-allowed",
      "semantics": {
        "requiresDryRun": false,
        "allowsMutation": true,
        "allowsTriageApply": true
      }
    }
  },
  "operation": {
    "family": "write_operation",
    "version": "v1",
    "phase": "apply",
    "command": "issue.update",
    "resource": "issue",
    "action": "update",
    "summary": "Updated issue ENG-123",
    "refs": {
      "issueIdentifier": "ENG-123",
      "teamKey": "ENG",
      "assignee": null,
      "parentIssueIdentifier": null,
      "state": "Triage",
      "sourceSystem": "slack",
      "sourceRef": "C12345:1712382000.100200"
    },
    "changes": [
      "labels",
      "team",
      "state",
      "comment"
    ],
    "noOp": false,
    "partialSuccess": false,
    "nextSafeAction": "read_before_retry",
    "autonomyPolicy": {
      "family": "source_intake_autonomy_policy",
      "version": "v1",
      "selected": "apply-allowed",
      "semantics": {
        "requiresDryRun": false,
        "allowsMutation": true,
        "allowsTriageApply": true
      }
    }
  }
}
'
stderr:
""
`;

snapshot[`Issue Update Command - With Comment 1`] = `
stdout:
"Updating issue ENG-123

✓ Updated issue ENG-123: Test Issue
https://linear.app/test-team/issue/ENG-123/test-issue
✓ Comment added to ENG-123
https://linear.app/test-team/issue/ENG-123/test-issue#comment-123
"
stderr:
""
`;

snapshot[`Issue Update Command - With Milestone 1`] = `
stdout:
"Updating issue ENG-123

✓ Updated issue ENG-123: Test Issue
https://linear.app/test-team/issue/ENG-123/test-issue
"
stderr:
""
`;

snapshot[`Issue Update Command - Case Insensitive Label Matching 1`] = `
stdout:
"Updating issue ENG-123

✓ Updated issue ENG-123: Test Issue
https://linear.app/test-team/issue/ENG-123/test-issue
"
stderr:
""
`;

snapshot[`Issue Update Command - Short Flag -p Is Priority 1`] = `
stdout:
"Updating issue ENG-123

✓ Updated issue ENG-123: Test Issue
https://linear.app/test-team/issue/ENG-123/test-issue
"
stderr:
""
`;

snapshot[`Issue Update Command - With Cycle 1`] = `
stdout:
"Updating issue ENG-123

✓ Updated issue ENG-123: Test Issue
https://linear.app/test-team/issue/ENG-123/test-issue
"
stderr:
""
`;

snapshot[`Issue Update Command - Clear Due Date 1`] = `
stdout:
"Updating issue ENG-123

✓ Updated issue ENG-123: Test Issue
https://linear.app/test-team/issue/ENG-123/test-issue
"
stderr:
""
`;

snapshot[`Issue Update Command - Due Date Conflict 1`] = `
stdout:
""
stderr:
"✗ Failed to update issue: Cannot specify both --due-date and --clear-due-date
  Use --due-date to set a due date, or --clear-due-date to remove it.
"
`;

snapshot[`Issue Update Command - JSON Due Date Conflict 1`] = `
stdout:
'{
  "success": false,
  "error": {
    "type": "validation_error",
    "message": "Cannot specify both --due-date and --clear-due-date",
    "suggestion": "Use --due-date to set a due date, or --clear-due-date to remove it.",
    "context": "Failed to update issue"
  }
}
'
stderr:
""
`;

snapshot[`Issue Update Command - JSON Comment Requires Updates 1`] = `
stdout:
'{
  "success": false,
  "error": {
    "type": "validation_error",
    "message": "Cannot add a comment without any issue updates",
    "suggestion": "Use \`linear issue comment add <ISSUE> --body <text>\` or pipe the comment body to \`linear issue comment add\` for a standalone comment.",
    "context": "Failed to update issue"
  }
}
'
stderr:
""
`;

snapshot[`Issue Update Command - Description Parse Guidance 1`] = `
stdout:
""
stderr:
\`✗ Failed to update issue: Missing value for option "--description".
  If you're passing long Markdown, prefer --description-file <path> or pipe content on stdin.
\`
`;

snapshot[`Issue Update Command - JSON Description Parse Guidance 1`] = `
stdout:
\`{
  "success": false,
  "error": {
    "type": "validation_error",
    "message": "Missing value for option \\\\"--description\\\\".",
    "suggestion": "If you're passing long Markdown, prefer --description-file <path> or pipe content on stdin.",
    "context": "Failed to update issue"
  }
}
\`
stderr:
""
`;
